syntax = "proto3";
package cloudlet.agent;
import "google/protobuf/empty.proto";

message ExecuteRequest {}

message ExecuteResponse {
  // enum Stage {
  //   PENDING = 0;
  //   BUILDING = 1;
  //   RUNNING = 2;
  //   DONE = 3;
  //   FAILED = 4;
  //   DEBUG = 5;
  // }
  //
  // string stdout = 1;
  // string stderr = 2;
  // int32 exit_code = 3;
  string output = 1;
}

message SignalRequest {
  enum Signal {
    KILL = 0;
  }
}

service WorkloadRunner {
  rpc Execute(ExecuteRequest) returns (stream ExecuteResponse) {}
  rpc Signal(SignalRequest) returns (google.protobuf.Empty) {}
}
